All of page  z-indexing correct levels

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -169,6 +169,7 @@ p {
     align-items: center;
     padding: 0px 30px;
     animation: fadeIn 0.5s;
+    z-index: 10;
   }  
 
 .sticky > .logo {
